// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar - Demo Basic 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-0">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left md-notice-bar-empty">
      <!---->
    </div>
    <div class="md-notice-bar-content">
      <div>为了确保您的资金安全，请设置支付密码</div>
    </div>
    <div class="md-notice-bar-right">
      <!---->
    </div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Customize 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-7">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-demo-icon md-notice-demo-icon-left md-icon-security security md" style="color:;"></i></div>
    <div class="md-notice-bar-content">
      <div>
        为了确保您的资金安全，请设置支付密码
      </div>
    </div>
    <div class="md-notice-bar-right">
      <!---->
    </div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Multi-line display 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-5">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-icon md-icon-security security md" style="color:;"></i></div>
    <div class="md-notice-bar-content md-notice-bar-multi-content">
      <div>
        为了确保您的资金安全，请设置支付密码。为了确保您的资金安全，请设置支付密码。为了确保您的资金安全，请设置支付密码。
      </div>
    </div>
    <div class="md-notice-bar-right"><i class="md-icon icon-font md-notice-icon md-notice-icon-right md-icon-arrow arrow md" style="color:;"></i></div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Round 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-3">
  <div class="md-notice-bar md-notice-bar-round default">
    <div class="md-notice-bar-left md-notice-bar-empty">
      <!---->
    </div>
    <div class="md-notice-bar-content">
      <div>为了确保您的资金安全，请设置支付密码</div>
    </div>
    <div class="md-notice-bar-right">
      <!---->
    </div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Scroll play 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-6">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-icon md-icon-volumn volumn md" style="color:;"></i></div>
    <div class="md-notice-bar-content">
      <div>
        为了确保您的资金安全，请设置支付密码为了确保您的资金安全，请设置支付密码为了确保您的资金安全，请设置支付密码
      </div>
    </div>
    <div class="md-notice-bar-right"><i class="md-icon icon-font md-notice-icon md-notice-icon-right md-icon-close close md" style="color:;"></i></div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Setting dwell time 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-2">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left md-notice-bar-empty">
      <!---->
    </div>
    <div class="md-notice-bar-content">
      <div>为了确保您的资金安全，请设置支付密码</div>
    </div>
    <div class="md-notice-bar-right">
      <!---->
    </div>
  </div>
</div>
`;

exports[`NoticeBar - Demo Theme 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-4">
  <div class="md-notice-bar warning">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-icon md-icon-warn warn md" style="color:;"></i></div>
    <div class="md-notice-bar-content">
      <div>
        该银行3:00-12:00系统维护，请更换其他银行卡
      </div>
    </div>
    <div class="md-notice-bar-right"><i class="md-icon icon-font md-notice-icon md-notice-icon-right md-icon-close close md" style="color:;"></i></div>
  </div>
  <div class="md-notice-bar activity" style="margin-top:10px;">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-icon md-icon-coupon coupon md" style="color:;"></i></div>
    <div class="md-notice-bar-content">
      <div>
        福利来啦，7日免息券发放中！
      </div>
    </div>
    <div class="md-notice-bar-right"><i class="md-icon icon-font md-notice-icon md-notice-icon-right md-icon-arrow arrow md" style="color:;"></i></div>
  </div>
</div>
`;

exports[`NoticeBar - Demo With icon 1`] = `
<div class="md-example-child md-example-child-notice-bar md-example-child-notice-bar-1">
  <div class="md-notice-bar default">
    <div class="md-notice-bar-left"><i class="md-icon icon-font md-notice-icon md-icon-security security md" style="color:;"></i></div>
    <div class="md-notice-bar-content">
      <div>
        为了确保您的资金安全，请设置支付密码
      </div>
    </div>
    <div class="md-notice-bar-right"><i class="md-icon icon-font md-notice-icon md-notice-icon-right md-icon-close close md" style="color:;"></i></div>
  </div>
</div>
`;
